# planframe

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  security.yml
docs/: index.md  planframe_backend_adapter_design.md  planframe_package_plan.md  planframe_resolve_typing_design.md  planframe_thesis.md  requirements.txt
docs/adapters/: capability-matrix.md  index.md
docs/adapters/template/: README.md
docs/guides/planframe/: README.md  creating-an-adapter.md
docs/guides/planframe-polars/: README.md  using-planframe-polars.md
docs/guides/planframe-polars/examples/: basic_usage.py
docs/guides/planframe/examples/: rows_adapter_minimal.py
docs/planframe/: index.md
docs/planframe/design/: backend-adapter-design.md  columnar-streaming.md  core-layout.md  interface-parity-pandas.md  interface-parity-polars.md  interface-parity-spark.md  ir-versioning.md  package-plan.md  polars-api-alignment.md  resolve-tier-3.md  thesis.md  typing-design.md
docs/planframe/design/_generated/: interface-inventory-pandas.md  interface-inventory-polars.md  interface-inventory-spark.md  pandas-missing.md  polars-missing.md  spark-missing.md
docs/planframe/guides/: adapter-conformance.md  creating-an-adapter.md  embedding-frame.md  migrating-since-1-1.md  migrating-to-0-8.md  migrating-to-1-0.md  pandas-like-api.md  pydantic-bridge.md  pyspark-like-api.md  streaming-rows.md
docs/planframe/reference/: api.md
docs/planframe_pandas/: index.md
docs/planframe_pandas/design/: parity.md
docs/planframe_pandas/guides/: using-planframe-pandas.md
docs/planframe_pandas/guides/examples/: basic_usage.py
docs/planframe_pandas/reference/: api.md
docs/planframe_polars/: index.md
docs/planframe_polars/design/: parity.md
docs/planframe_polars/guides/: using-planframe-polars.md
docs/planframe_polars/reference/: api.md
docs/planframe_spark/: index.md
docs/planframe_spark/design/: parity.md
docs/planframe_spark/guides/: using-planframe-spark.md
docs/planframe_sparkless/: index.md
docs/shared/: faq.md  glossary.md  stability-and-compatibility.md
scripts/: audit-deps.sh  bench_schema_field_map.py  build-dist.sh  generate_interface_parity_inventory.py  generate_typing_stubs.py
scripts/templates/: frame.pyi.j2  schema_types.pyi.j2
tests/: conftest.py  test_adapter_async_io_defaults.py  test_adapter_capabilities.py  test_adapter_conformance_kit_polars.py  test_async_materialize.py  test_core_lazy_and_schema.py  test_drop_nulls_modes.py  test_execute_plan_nodes.py  test_execution_api.py  test_expr_aliasing.py  test_expr_api_coverage.py  test_frame_api_coverage.py  test_frame_repr.py  test_groupby_branches.py  test_hypothesis_invariants.py  test_ir_version.py  test_ir_versions.py  test_issue_104_resolve_dtype.py  test_issue_105_async_public_api.py  test_issue_107_materialize_boundary.py  test_issue_113_resolve_dtype.py  test_issue_114_compile_expr_unknown_column_policy.py  test_issue_115_adapter_async_capabilities.py  test_issue_117_adapter_columnar_streamer.py  test_materialize_pydantic_base.py  test_optimize_plan.py  test_pandas_conformance.py  test_pandas_conformance_parity.py  test_pandaslikeframe.py  test_plan_optimize_branches.py  test_plan_walk.py  test_plan_walk_branches.py  test_polars_conformance.py  test_polars_join_options.py  test_pyright_typing.py  test_schema_branches.py  test_selector_runtime_checkable.py  test_sparkframe.py  test_sparkless_basic.py  test_sparkless_more.py  (+6 more)
tests/pyright/: pyrightconfig.json
tests/pyright/fail/: contains_literal_must_be_bool.py  dynamic_column_names.py  fill_null_rejects_value_and_strategy.py  fill_null_requires_value_or_strategy.py  filter_requires_bool_expr.py  group_by_requires_key.py  join_invalid_how.py  join_invalid_on_type.py  materialize_kind_must_be_known_literal.py  melt_requires_tuples.py  over_partition_by_must_be_strings.py  pivot_index_must_be_strings.py  polarsframe_constructor_data_must_be_mapping_or_rows.py  read_database_uri_engine_must_be_known_literal.py  replace_literal_must_be_bool.py  sample_frac_must_be_float.py  sample_n_must_be_int.py  sort_nulls_last_must_be_bool.py  split_by_must_be_str.py  unique_keep_must_be_literal.py  unique_maintain_order_must_be_bool.py  with_column_requires_expr.py  write_database_if_exists_must_be_literal.py  write_parquet_compression_must_be_literal.py  write_parquet_path_must_be_str.py  xor_requires_bool_exprs.py
tests/pyright/pass/: basic_usage.py  cast_many_and_subset.py  clip.py  concat_vertical.py  duplicated_keep_false_is_allowed_typing.py  embedding_frame_wrapper.py  expr_aliasing.py  expr_comparisons.py  expr_ir_public_contract.py  extended_expressions.py  fill_null_many_and_subset.py  fill_null_strategy_and_expr.py  frame_any_alias.py  group_by_agg.py  group_by_dynamic.py  group_by_expr_keys.py  io_even_more.py  io_more.py  io_reads_writes.py  join_basic.py  join_expr_keys.py  join_many_keys.py  materialize_boundary.py  materialize_kind_literals.py  more_expressions.py  new_transforms.py  null_helpers_and_melt.py  pandas_and_spark_skins.py  pandas_query_string_subset.py  pattern_select_drop.py  pivot.py  pivot_longer_wider.py  polars_constructors_new.py  public_api_tooling.py  rename_case_helpers.py  rolling_agg.py  row_ops.py  sample_and_more_exprs.py  schema_convenience_ops.py  select_schema.py  (+8 more)
tests/pyright/typings/: annotationlib.pyi
(+4 files in other folders)
