[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "PlanFrame"
version = "0.2.0"
description = "Workspace meta-package for PlanFrame (see packages/)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PlanFrame Contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pyright>=1.1.350",
  "ruff>=0.5",
  "connectorx",
  "xlsxwriter",
  "fastexcel>=0.7.0",
  "deltalake",
]

[tool.hatch.build.targets.wheel]
# Root is a workspace/meta package; nothing to ship.
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
 
