[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "PlanFrame"
version = "1.0.0"
description = "Workspace meta-package for PlanFrame (see packages/)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PlanFrame Contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pyright>=1.1.350",
  "ruff>=0.9",
  "ty>=0.0.25",
  "coverage[toml]>=7.6",
  "sparkless>=4.5",
  "pandas>=2.0",
  "pyarrow>=14",
  "connectorx",
  "xlsxwriter",
  "fastexcel>=0.7.0",
  "deltalake",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.27",
  "mkdocs-section-index>=0.3",
  "pymdown-extensions>=10",
]

[tool.hatch.build.targets.wheel]
# Root is a workspace/meta package; nothing to ship.
packages = []
include = ["README.md", "LICENSE", "pyproject.toml", "CHANGELOG.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "typing: typing-only tests (pyright stub regression suite)",
  "conformance: backend conformance/integration tests (e.g. Polars)",
  "slow: slower tests (opt-in for local/CI filtering)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = [
    "packages/planframe",
    "packages/planframe-polars",
    "packages/planframe-pandas",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
]

[tool.ruff.lint.isort]
known-first-party = [
  "planframe",
  "planframe_pandas",
  "planframe_polars",
  "planframe_spark",
  "planframe_sparkless",
]

# Astral ty — https://docs.astral.sh/ty/reference/configuration/
[tool.ty.environment]
python-version = "3.10"
root = [
    "packages/planframe",
    "packages/planframe-polars",
    "packages/planframe-pandas",
    "packages/planframe-sparkless",
]

# First-party code only; tests remain covered by Pyright (`tests/pyright/`, `test_pyright_typing.py`).
[tool.ty.src]
include = ["packages/**/*.py", "packages/**/*.pyi", "scripts/**/*.py"]

[tool.coverage.run]
branch = true
source = ["packages/planframe/planframe"]
omit = [
  "*/__init__.py",
  "*/typing/*",
  "*.pyi",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 95

[dependency-groups]
dev = [
    "pytest-xdist>=3.8.0",
]

